styles.css
/*
    Author: Jacob Stone
    File: Style sheet for the blog preview card challenge
*/

/*reset styles*/
body, main, a, image {
    margin: 0;
    padding: 0;
    border: 0;
}

/*body styles*/
body {
    font-family: "Figtree", sans-serif;
    font-style: normal;
}

/*body paragraph*/
body p {
    font-size: 16px;
    font-weight: 500;
}

/*body headers*/
body h1, h2, h3, h4, h5, h6 {
    font-weight: 800;
}

/*main content area*/
main {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: hsl(47, 88%, 63%);
    height: 100vh;
    width: 100vw;
}

/*attribution*/
.attribution {
    font-size: 11px;
    text-align: center;
    position: absolute;
    bottom: 0%;
    width: 100%;
    height: 2.5rem;
}

/*attribution links*/
.attribution a {
    color: hsl(228, 45%, 44%);
    text-decoration: none;
}

/*blog card*/
.blog-card {
    background-color: hsl(0, 0%, 100%);
    display: flex;
    flex-direction: column;
    border-width: 2px;
    border-color: black;
    border-style: solid;
    border-radius: 20px;
    width: 20%;
    height: 50%;
    box-shadow: 10px 10px 0px hsl(0, 0%, 7%);
    transition: box-shadow 0.3s ease;
}

.blog-card:hover {
    box-shadow: 15px 15px 0px hsl(0, 0%, 7%);
    cursor: pointer;
}

.blog-card:hover .blog-title {
    color: hsl(47, 88%, 63%);
}



/*blog image container*/
.blog-img {
    display: flex;
    margin-top: 25px;
    margin-left: 25px;
    margin-right: 25px;
    margin-bottom: 10px;
    justify-content: center;
}

/*blog image img*/
.blog-img img {
    border-radius: 20px;
    width: 100%;
}

/*blog-tag*/
.blog-tag {
    display: flex;
    border-radius: 5px;
    background-color: hsl(47, 88%, 63%);
    margin-top: 25px;
    margin-left: 25px;
    margin-right: 25px;
    align-items: center;
    width: min-content;
    padding-left: 10px;
    padding-right: 10px;
    height: 35px
}

/*blog date container*/
.blog-date {
    display: flex;
    align-items: center;
    margin-left: 25px;
}

/*blog date paragraph*/
.blog-date p {
    font-weight: 600;
}

/*blog-title container*/
.blog-title {
    display: flex;
    align-items: center;
    height: min-content;
    margin-left: 25px;
    margin-top: 0;
    margin-bottom: 0;
    transition: color 0.3s ease;
}

/*blog description container*/
.blog-descr {
    display: flex;
    align-items: center;
    margin-left: 25px;
    margin-right: 25px;
}

/*blog-descr paragraph*/
.blog-descr p {
    color:hsl(0, 0%, 50%);
    font-size: 20px;
}

.blog-author {
    display: flex;
    margin-left: 25px;
    margin-bottom: 25px;
}

.blog-author img {
    display: flex;
    align-items: center;
}

.blog-author p {
    display: flex;
    align-items: center;
    margin-left: 10px;
}

